fixes spacings on mobile

--- a/src/components/TopBar/components/Menu/Menu.scss
+++ b/src/components/TopBar/components/Menu/Menu.scss
@@ -26,7 +26,6 @@ $activator-variables: (
   justify-content: center;
   align-items: center;
   min-width: menu(min-width);
-  margin: 0;
   padding: rem(6px) spacing(tight);
   border: 0;
   cursor: pointer;
@@ -51,7 +50,7 @@ $activator-variables: (
   }
 
   @include breakpoint-before(layout-width(page-with-nav), false) {
-    margin-right: 0;
+    margin: 0 spacing(extra-tight);
 
     &:focus,
     &:hover,
